--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   bloc_test: ^9.1.6
   freezed_annotation: ^2.4.1
   mockito: ^5.4.4
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
