--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,10 @@ dependencies:
   very_good_analysis: ^5.1.0
   flutter_blue_plus: ^1.31.16
   bloc: ^8.1.3
-  bloc_test: ^9.1.6
   freezed_annotation: ^2.4.1
   mockito: ^5.4.4
   rxdart: ^0.27.7
+  flutter_bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
